Dashboard Updates & Bug Fixes
Dashboard Updates and minor bug fixes

--- a/LKaifer_BugTracker/Views/Account/ForgotPassword.cshtml
+++ b/LKaifer_BugTracker/Views/Account/ForgotPassword.cshtml
@@ -1,11 +1,21 @@
 ﻿@model LKaifer_BugTracker.Models.ForgotPasswordViewModel
 @{
-        Layout = null;
+    Layout = null;
 
-    ViewBag.Title = "Forgot your password?";
+    //ViewBag.Title = "Forgot your password?";
 }
+    <head>
+        <link href="~/Content/css/bootstrap.css" rel="stylesheet" />
+        <link href="~/Content/css/component.css" rel="stylesheet" />
+        <link href="~/Content/css/style.css" rel="stylesheet" />
+    </head>
 
 <h2>@ViewBag.Title.</h2>
+<div class="forms-main_agileits">
+
+    <div class="graph-form agile_info_shadow">
+        <h3 class="w3_inner_tittle two">Forgot Your Password? </h3>
+        <div class="form-body">
 
 @using (Html.BeginForm("ForgotPassword", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
@@ -25,6 +35,12 @@
         </div>
     </div>
 }
+        </div>
+
+    </div>
+</div>
+
+
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
