--- a/LKaifer_BugTracker/Views/Account/ResetPasswordConfirmation.cshtml
+++ b/LKaifer_BugTracker/Views/Account/ResetPasswordConfirmation.cshtml
@@ -1,10 +1,18 @@
 ﻿@{
     ViewBag.Title = "Reset password confirmation";
+    Layout = null;
 }
 
 <hgroup class="title">
     <h1>@ViewBag.Title.</h1>
 </hgroup>
+
+<head>
+    <link href="~/Content/css/bootstrap.css" rel="stylesheet" />
+    <link href="~/Content/css/component.css" rel="stylesheet" />
+    <link href="~/Content/css/style.css" rel="stylesheet" />
+</head>
+
 <div>
     <p>
         Your password has been reset. Please @Html.ActionLink("click here to log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })
