--- a/LKaifer_BugTracker/Views/Account/ForgotPasswordConfirmation.cshtml
+++ b/LKaifer_BugTracker/Views/Account/ForgotPasswordConfirmation.cshtml
@@ -1,13 +1,21 @@
 ﻿@{
     ViewBag.Title = "Forgot Password Confirmation";
+    Layout = null;
 }
 
+<head>
+    <link href="~/Content/css/bootstrap.css" rel="stylesheet" />
+    <link href="~/Content/css/component.css" rel="stylesheet" />
+    <link href="~/Content/css/style.css" rel="stylesheet" />
+</head>
+
 <hgroup class="title">
-    <h1>@ViewBag.Title.</h1>
+    <h2>@ViewBag.Title.</h2>
 </hgroup>
 <div>
-    <p>
+    <hr />
+    <h1>
         Please check your email to reset your password.
-    </p>
+    </h1>
 </div>
-	
+
