Login, Register, DemoLogin Styling
Styling changes

--- a/LKaifer_BugTracker/Views/Account/DemoLogin.cshtml
+++ b/LKaifer_BugTracker/Views/Account/DemoLogin.cshtml
@@ -168,6 +168,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
         <div class="over_lay_agile_pages_w3ls" style="height:100vh">
             <div class="registration">
                 <div class="signin-form profile">
+                    <h1 style="font-weight: bolder"><span style="color:red">BUGS BE GONE</span></h1>
                     <h2>Demo User Login</h2>
                     <!-- /inner_content_w3_agile_info-->
                     <!-- /agile_top_w3_grids-->
