--- a/LKaifer_BugTracker/Views/Account/Login.cshtml
+++ b/LKaifer_BugTracker/Views/Account/Login.cshtml
@@ -42,8 +42,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         <!-- /login -->
         <div class="over_lay_agile_pages_w3ls" style="height:100vh">
             <div class="registration">
-
                 <div class="signin-form profile">
+                    <h1 style="font-weight: bolder"><span style="color:red">BUGS BE GONE</span></h1>
                     <h2>Sign in Form</h2>
                     <div class="login-form">
                         @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post))
