--- a/LKaifer_BugTracker/Views/Account/Register.cshtml
+++ b/LKaifer_BugTracker/Views/Account/Register.cshtml
@@ -41,8 +41,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         <!-- /login -->
         <div class="over_lay_agile_pages_w3ls" style="height:100vh">
             <div class="registration">
-
                 <div class="signin-form profile">
+                    <h1 style="font-weight: bolder"><span style="color:red">BUGS BE GONE</span></h1>
                     <h2>Sign up Form</h2>
                     <div class="login-form">
                         @using (Html.BeginForm("Register", "Account", FormMethod.Post, new { enctype = "Multipart/form-data" }))
@@ -66,18 +66,18 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
 
                         @*<form action="#" method="post">
-                            <input type="text" name="FirstName" placeholder="First Name" required="">
-                            <input type="text" name="LastName" placeholder="Last Name" required="">
-                            <input type="text" name="DisplayName" placeholder="Display Name" required="">
-                            <input type="email" name="email" placeholder="E-mail" required="">
-                            <input type="password" name="Password" placeholder="Password" required="">
-                            <input type="password" name="ConfirmPassword" placeholder="Confirm Password" required="">
-                            <label>Please upload an avatar.</label>
-                            <input type="file" name="Avatar" placeholder="Avatar" required="">
+                <input type="text" name="FirstName" placeholder="First Name" required="">
+                <input type="text" name="LastName" placeholder="Last Name" required="">
+                <input type="text" name="DisplayName" placeholder="Display Name" required="">
+                <input type="email" name="email" placeholder="E-mail" required="">
+                <input type="password" name="Password" placeholder="Password" required="">
+                <input type="password" name="ConfirmPassword" placeholder="Confirm Password" required="">
+                <label>Please upload an avatar.</label>
+                <input type="file" name="Avatar" placeholder="Avatar" required="">
 
 
 
-                        </form>*@
+            </form>*@
                     </div>
 
 
