--- a/LKaifer_BugTracker/Views/Home/Index.cshtml
+++ b/LKaifer_BugTracker/Views/Home/Index.cshtml
@@ -178,7 +178,7 @@
                     <h4 class="ca-main two">
                         @allUsers.Count
                     </h4>
-                    <h3 class="ca-sub two">Team Members Index</h3>
+                    <h3 class="ca-sub two">Team Members Directory</h3>
                 </div>
             </a>
         </li>
@@ -389,7 +389,7 @@
         <!--Company Overview begins-->
         <div class="col-md-6">
             <div class="panel panel-danger">
-                <div class="panel-projects">
+                <div class="panel-statistics">
                     <div class="panel-heading">
                         Company Overview
                         <a href="#ticket-overview-panel" data-toggle="collapse" aria-expanded="true" id="ticket-overview-collapse-button" title="collapse">
