Updated Charts & Forgot Password Page
Charts & Forgot password updates

--- a/LKaifer_BugTracker/Views/Account/DemoLogin.cshtml
+++ b/LKaifer_BugTracker/Views/Account/DemoLogin.cshtml
@@ -244,13 +244,13 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                                 </li>
                             }
                         </ul>
+                </div>
+                    <div class="link-container">
+                        <h6 style="font-weight:bolder">Would you like to sign up? Click<a href="@Url.Action("Register")"> here.</a></h6>
+                        <h6 style="font-weight:bolder">Want to go back to login page? Click<a href="@Url.Action("Login")"> here.</a></h6>
+                    </div>
                     </div>
                     <br />
-                    <div class="link-container">
-                        <h6>Don't have an account? Click<a href="@Url.Action("Register")"> here.</a></h6>
-                        <h6>Want to go back to login page? Click<a href="@Url.Action("Login")"> here.</a></h6>
-                    </div>
-                </div>
             </div>
             <!--copy rights start here-->
             <div class="copyrights_agile two">
