--- a/LKaifer_BugTracker/Content/css/style.css
+++ b/LKaifer_BugTracker/Content/css/style.css
@@ -1042,16 +1042,17 @@ figure.icons,.weather-text {
     margin-top: 0.5em;
 	    letter-spacing: 1px;
 }
-.weather_w3_inner_info{
-    background: url(../../images/bottom.jpg)no-repeat center;
+.weather_w3_inner_info {
+    /*background: url(../../images/bottom.jpg)no-repeat center;*/
+    /*background: url('../../images/strip-bug-4361218_1920.jpg');*/
+    background: url('../../images/cornflower-102585_1920.jpg');
     background-size: cover;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
     -ms-background-size: cover;
     min-height: 300px;
-   background-attachment: fixed;
-
+    background-attachment: fixed;
 }
 .social_media_w3ls {
     margin-top: 2em;
@@ -1886,8 +1887,10 @@ margin: 0.5em 0 1.5em 0;
     font-size: 1.4em;
     letter-spacing: 1px;
 }
-.pages_agile_info_w3l{
-	    background: url(../../images/bottom.jpg)no-repeat center;
+.pages_agile_info_w3l {
+    /*background: url('../../images/strip-bug-4361218_1920.jpg');*/
+    background: url('../../images/cornflower-102585_1920.jpg');
+    /*background: url(../../images/bottom.jpg)no-repeat center;*/
     background-size: cover;
     -webkit-background-size: cover;
     -moz-background-size: cover;
